--- a/SilviaCosmeticos/SilviaCosmeticos/Views/Produto/PreCadastro.cshtml
+++ b/SilviaCosmeticos/SilviaCosmeticos/Views/Produto/PreCadastro.cshtml
@@ -9,19 +9,19 @@
     <form method="post" action="/produto/cadastrar">
 
         <label>Qual nome do seu produto? </label>
-        <input type="text" placeholder="Malbec, Kaiak" name="Nome"/><br />
+        <input type="text" placeholder="Malbec, Kaiak"/><br />
 
         <label>Qual marca desse produto? </label>
-        <input type="text" placeholder="Natura, Avon" name="Marca"/><br />
+        <input type="text" placeholder="Natura, Avon" /><br />
 
         <label>Qual o tipo de produto? </label>
-        <input type="text" placeholder="Perfume, shampoo" name="Tipo" /><br />
+        <input type="text" placeholder="Perfume, shampoo" /><br />
 
         <label>Valor: </label>
-        <input type="text" placeholder="100, 200" name="Valor"/><br />
+        <input type="text" placeholder="100, 200" /><br />
 
         <label>Quantidade: </label>
-        <input type="text" placeholder="60, 44" name="Quantidade"/><br />
+        <input type="text" placeholder="60, 44" /><br />
 
         <input type="submit" value="Cadastrar" />
     </form>
