Alteração no cadastro do produto, pois nao estava recebendo os parâmetros do html

--- a/SilviaCosmeticos/SilviaCosmeticos/Views/Produto/ChamarEditar.cshtml
+++ b/SilviaCosmeticos/SilviaCosmeticos/Views/Produto/ChamarEditar.cshtml
@@ -18,10 +18,10 @@
         <input type="text" placeholder="Perfume, shampoo" name="Tipo" /><br />
 
         <label>Valor: </label>
-        <input type="text" placeholder="100, 200" name="Valor" /><br />
+        <input type="text" name="Valor" /><br />
 
         <label>Quantidade: </label>
-        <input type="text" placeholder="60, 44" name="Quantidade" /><br />
+        <input type="text" name="Quantidade" /><br />
 
         <input type="hidden" value="@ViewData["valor"]" name="id">
         <input type="submit" value="salvar alterações" />
