--- a/SilviaCosmeticos/Views/Usuario/DeletarUsuario.cshtml
+++ b/SilviaCosmeticos/Views/Usuario/DeletarUsuario.cshtml
@@ -11,7 +11,7 @@
         <il>Editar</il> <input type="submit" value=">" />
     </form>
 
-    <form method="get" action="/produto/listarusuario">
+    <form method="get" action="/produto/listarusuarios">
         <il>Deletar novo Usuario</il> <input type="submit" value=">" />
     </form>
 
