--- a/SilviaCosmeticos/Views/Home/Index.cshtml
+++ b/SilviaCosmeticos/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <h2>Faça seu login</h2>
 
 <div>
-    <form method="get" action="/produto/entrar">
+    <form method="get" action="/produto/entrarbuscarusuarioporid">
         <label>Nome</label><br />
         <input type="text" name="Nome" placeholder="Use apenas caracteres" required /><br />
 
